# confluence-cli

./: .gitignore  README.md  out.html  pyproject.toml  sample.md  update.html  update.md
src/: __init__.py  cli.py
src/commands/: auth.py  author.py  browse.py  config_cmd.py  convert_only.py  create_document.py  update_document.py
src/confluence/: __init__.py  client.py  errors.py
src/converters/: markdown.py
src/llm/: base.py  ollama.py  openai_compat.py
src/prompts/: authoring.py
src/utils/: config.py  log.py  render.py  retry.py
templates/: footer.html  header.html
tests/: test_client.py  test_markdown.py
